@@ -48,8 +48,8 @@ void asciiField::loadFieldMap_Dipole(gMappedField* map, double verbosity)
 	// ignoring header
 	while(tmp != "</mfield>")
 	{
-		fscanf(fp, "%s", ctmp);
-		tmp = string(ctmp);
+		if(fscanf(fp, "%s", ctmp) != 0)
+			tmp = string(ctmp);
 	}
 
 	// now reading map
@@ -58,43 +58,43 @@ void asciiField::loadFieldMap_Dipole(gMappedField* map, double verbosity)
 	{
 		for(int i2 = 0; i2<np_2 ; i2++)
 		{
-			fscanf(fp, "%lg %lg %lg", &d1, &d2, &b);
+			if(fscanf(fp, "%lg %lg %lg", &d1, &d2, &b) != 0) {
 
-			d1 *= unit1;
-			d2 *= unit2;
+				d1 *= unit1;
+				d2 *= unit2;
 
-			b  *= scale;
+				b  *= scale;
 
-			if(verbosity>4 && verbosity != 99)
-			cout << "  Loading Map: coordinates (" << d1 << ", " << d2 << ")   value: " << b << endl;
+				if(verbosity>4 && verbosity != 99)
+					cout << "  Loading Map: coordinates (" << d1 << ", " << d2 << ")   value: " << b << endl;
 
 
-			// checking map consistency for first coordinate
-			if( (min1  + i1*cell1 - d1)/d1 > 0.001)
-			{
-				cout << "   !! Error:  coordinate index wrong. Map first point should be " <<  min1  + i1*cell1
-				<< " but it's  " << d1 << " instead. Cell size: " << cell1 << "  min: " << min1 << " max : " << max1 << "  index: " << i1 << endl;
+				// checking map consistency for first coordinate
+				if( (min1  + i1*cell1 - d1)/d1 > 0.001)
+				{
+					cout << "   !! Error:  coordinate index wrong. Map first point should be " <<  min1  + i1*cell1
+					<< " but it's  " << d1 << " instead. Cell size: " << cell1 << "  min: " << min1 << " max : " << max1 << "  index: " << i1 << endl;
+				}
+				// checking map consistency for second coordinate
+				if( (min2  + i2*cell2 - d2)/d2 > 0.001)
+				{
+					cout << "   !! Error:  coordinate index wrong. Map second point should be " <<  min2  + i2*cell2
+					<< " but it's  " << d2 << " instead. Cell size: " << cell2 << "  min: " << min2 << " max : " << max2 << "  index: " << i2 << endl;
+				}
+
+				// calculating index
+				unsigned t1 = (unsigned) floor( ( d1 - min1 + cell1/2 ) / ( cell1 ) ) ;
+				unsigned t2 = (unsigned) floor( ( d2 - min2 + cell2/2 ) / ( cell2 ) ) ;
+
+				// The values are indexed as B1_2D[longi][transverse]
+				if(   map->getCoordinateWithSpeed(0).name == "longitudinal"
+					&& map->getCoordinateWithSpeed(1).name == "transverse")
+					map->B1_2D[t1][t2] = b;
+
+				if(   map->getCoordinateWithSpeed(0).name == "transverse"
+					&& map->getCoordinateWithSpeed(1).name == "longitudinal")
+					map->B1_2D[t2][t1] = b;
 			}
-			// checking map consistency for second coordinate
-			if( (min2  + i2*cell2 - d2)/d2 > 0.001)
-			{
-				cout << "   !! Error:  coordinate index wrong. Map second point should be " <<  min2  + i2*cell2
-				<< " but it's  " << d2 << " instead. Cell size: " << cell2 << "  min: " << min2 << " max : " << max2 << "  index: " << i2 << endl;
-			}
-
-			// calculating index
-			unsigned t1 = (unsigned) floor( ( d1 - min1 + cell1/2 ) / ( cell1 ) ) ;
-			unsigned t2 = (unsigned) floor( ( d2 - min2 + cell2/2 ) / ( cell2 ) ) ;
-
-			// The values are indexed as B1_2D[longi][transverse]
-			if(   map->getCoordinateWithSpeed(0).name == "longitudinal"
-				&& map->getCoordinateWithSpeed(1).name == "transverse")
-			map->B1_2D[t1][t2] = b;
-
-			if(   map->getCoordinateWithSpeed(0).name == "transverse"
-				&& map->getCoordinateWithSpeed(1).name == "longitudinal")
-			map->B1_2D[t2][t1] = b;
-
 		}
 
 		cout << "    [";
