@@ -62,8 +62,8 @@ void asciiField::loadFieldMap_phiSegmented(gMappedField* map, double verbosity)
 	// ignoring header
 	while(tmp != "</mfield>")
 	{
-		fscanf(fp, "%s", ctmp);
-		tmp = string(ctmp);
+		if(fscanf(fp, "%s", ctmp) != 0)
+			tmp = string(ctmp);
 	}
 
 	// now reading map
@@ -74,93 +74,93 @@ void asciiField::loadFieldMap_phiSegmented(gMappedField* map, double verbosity)
 		{
 			for(int i3 = 0; i3<np_3 ; i3++)
 			{
-				fscanf(fp, "%lg %lg %lg %lg %lg %lg", &d1, &d2, &d3, &b1, &b2, &b3);
+				if(fscanf(fp, "%lg %lg %lg %lg %lg %lg", &d1, &d2, &d3, &b1, &b2, &b3) !=0 ) {
 
-				d1 *= unit1;
-				d2 *= unit2;
-				d3 *= unit3;
-				b1 *= scale;
-				b2 *= scale;
-				b3 *= scale;
+					d1 *= unit1;
+					d2 *= unit2;
+					d3 *= unit3;
+					b1 *= scale;
+					b2 *= scale;
+					b3 *= scale;
 
-				// checking map consistency for first coordinate
-				if( (min1  + i1*cell1 - d1)/d1 > 0.001)
-				{
-					cout << "   !! Error:  coordinate index wrong. Map point should be " <<  min1  + i1*cell1
-					<< " but it's  " << d1 << " instead." << endl;
-				}
-				// checking map consistency for second coordinate
-				if( (min2  + i2*cell2 - d2)/d2 > 0.001)
-				{
-					cout << "   !! Error:  coordinate index wrong. Map point should be " <<  min2  + i2*cell2
-					<< " but it's  " << d2 << " instead." << endl;
-				}
+					// checking map consistency for first coordinate
+					if( (min1  + i1*cell1 - d1)/d1 > 0.001)
+					{
+						cout << "   !! Error:  coordinate index wrong. Map point should be " <<  min1  + i1*cell1
+						<< " but it's  " << d1 << " instead." << endl;
+					}
+					// checking map consistency for second coordinate
+					if( (min2  + i2*cell2 - d2)/d2 > 0.001)
+					{
+						cout << "   !! Error:  coordinate index wrong. Map point should be " <<  min2  + i2*cell2
+						<< " but it's  " << d2 << " instead." << endl;
+					}
 
-				// checking map consistency for third coordinate
-				if( (min3  + i3*cell3 - d3)/d3 > 0.001)
-				{
-					cout << "   !! Error:  coordinate index wrong. Map point should be " <<  min2  + i2*cell2
-					<< " but it's  " << d2 << " instead." << endl;
-				}
+					// checking map consistency for third coordinate
+					if( (min3  + i3*cell3 - d3)/d3 > 0.001)
+					{
+						cout << "   !! Error:  coordinate index wrong. Map point should be " <<  min2  + i2*cell2
+						<< " but it's  " << d2 << " instead." << endl;
+					}
 
-				if(verbosity>4 && verbosity != 99)
-				cout << "  Loading Map: coordinates (" << d1 << ", " << d2 << ", " << d3 << ")   values: (" << b1 << ", " << b2 << ", " << b3 << ")." << endl;
+					if(verbosity>4 && verbosity != 99)
+						cout << "  Loading Map: coordinates (" << d1 << ", " << d2 << ", " << d3 << ")   values: (" << b1 << ", " << b2 << ", " << b3 << ")." << endl;
 
-				// calculating index
-				unsigned t1 = (unsigned) floor( ( d1 - min1 + cell1/2 ) / ( cell1 ) ) ;
-				unsigned t2 = (unsigned) floor( ( d2 - min2 + cell2/2 ) / ( cell2 ) ) ;
-				unsigned t3 = (unsigned) floor( ( d3 - min3 + cell3/2 ) / ( cell3 ) ) ;
+					// calculating index
+					unsigned t1 = (unsigned) floor( ( d1 - min1 + cell1/2 ) / ( cell1 ) ) ;
+					unsigned t2 = (unsigned) floor( ( d2 - min2 + cell2/2 ) / ( cell2 ) ) ;
+					unsigned t3 = (unsigned) floor( ( d3 - min3 + cell3/2 ) / ( cell3 ) ) ;
 
-				// The values are indexed as B1_3D[AZI][TRANSVERSE][LONGI]
-				if(   map->getCoordinateWithSpeed(0).name == "azimuthal"
-					&& map->getCoordinateWithSpeed(1).name == "transverse"
-					&& map->getCoordinateWithSpeed(2).name == "longitudinal" )
-				{
-					map->B1_3D[t1][t2][t3] = b1;
-					map->B2_3D[t1][t2][t3] = b2;
-					map->B3_3D[t1][t2][t3] = b3;
+					// The values are indexed as B1_3D[AZI][TRANSVERSE][LONGI]
+					if(   map->getCoordinateWithSpeed(0).name == "azimuthal"
+						&& map->getCoordinateWithSpeed(1).name == "transverse"
+						&& map->getCoordinateWithSpeed(2).name == "longitudinal" )
+					{
+						map->B1_3D[t1][t2][t3] = b1;
+						map->B2_3D[t1][t2][t3] = b2;
+						map->B3_3D[t1][t2][t3] = b3;
+					}
+					if(   map->getCoordinateWithSpeed(0).name == "azimuthal"
+						&& map->getCoordinateWithSpeed(1).name == "longitudinal"
+						&& map->getCoordinateWithSpeed(2).name == "transverse" )
+					{
+						map->B1_3D[t1][t3][t2] = b1;
+						map->B2_3D[t1][t3][t2] = b2;
+						map->B3_3D[t1][t3][t2] = b3;
+					}
+					if(   map->getCoordinateWithSpeed(0).name == "longitudinal"
+						&& map->getCoordinateWithSpeed(1).name == "azimuthal"
+						&& map->getCoordinateWithSpeed(2).name == "transverse" )
+					{
+						map->B1_3D[t3][t1][t2] = b1;
+						map->B2_3D[t3][t1][t2] = b2;
+						map->B3_3D[t3][t1][t2] = b3;
+					}
+					if(   map->getCoordinateWithSpeed(0).name == "longitudinal"
+						&& map->getCoordinateWithSpeed(1).name == "transverse"
+						&& map->getCoordinateWithSpeed(2).name == "azimuthal" )
+					{
+						map->B1_3D[t3][t2][t1] = b1;
+						map->B2_3D[t3][t2][t1] = b2;
+						map->B3_3D[t3][t2][t1] = b3;
+					}
+					if(   map->getCoordinateWithSpeed(0).name == "transverse"
+						&& map->getCoordinateWithSpeed(1).name == "longitudinal"
+						&& map->getCoordinateWithSpeed(2).name == "azimuthal" )
+					{
+						map->B1_3D[t2][t3][t1] = b1;
+						map->B2_3D[t2][t3][t1] = b2;
+						map->B3_3D[t2][t3][t1] = b3;
+					}
+					if(   map->getCoordinateWithSpeed(0).name == "transverse"
+						&& map->getCoordinateWithSpeed(1).name == "azimuthal"
+						&& map->getCoordinateWithSpeed(2).name == "longitudinal" )
+					{
+						map->B1_3D[t2][t1][t3] = b1;
+						map->B2_3D[t2][t1][t3] = b2;
+						map->B3_3D[t2][t1][t3] = b3;
+					}
 				}
-				if(   map->getCoordinateWithSpeed(0).name == "azimuthal"
-					&& map->getCoordinateWithSpeed(1).name == "longitudinal"
-					&& map->getCoordinateWithSpeed(2).name == "transverse" )
-				{
-					map->B1_3D[t1][t3][t2] = b1;
-					map->B2_3D[t1][t3][t2] = b2;
-					map->B3_3D[t1][t3][t2] = b3;
-				}
-				if(   map->getCoordinateWithSpeed(0).name == "longitudinal"
-					&& map->getCoordinateWithSpeed(1).name == "azimuthal"
-					&& map->getCoordinateWithSpeed(2).name == "transverse" )
-				{
-					map->B1_3D[t3][t1][t2] = b1;
-					map->B2_3D[t3][t1][t2] = b2;
-					map->B3_3D[t3][t1][t2] = b3;
-				}
-				if(   map->getCoordinateWithSpeed(0).name == "longitudinal"
-					&& map->getCoordinateWithSpeed(1).name == "transverse"
-					&& map->getCoordinateWithSpeed(2).name == "azimuthal" )
-				{
-					map->B1_3D[t3][t2][t1] = b1;
-					map->B2_3D[t3][t2][t1] = b2;
-					map->B3_3D[t3][t2][t1] = b3;
-				}
-				if(   map->getCoordinateWithSpeed(0).name == "transverse"
-					&& map->getCoordinateWithSpeed(1).name == "longitudinal"
-					&& map->getCoordinateWithSpeed(2).name == "azimuthal" )
-				{
-					map->B1_3D[t2][t3][t1] = b1;
-					map->B2_3D[t2][t3][t1] = b2;
-					map->B3_3D[t2][t3][t1] = b3;
-				}
-				if(   map->getCoordinateWithSpeed(0).name == "transverse"
-					&& map->getCoordinateWithSpeed(1).name == "azimuthal"
-					&& map->getCoordinateWithSpeed(2).name == "longitudinal" )
-				{
-					map->B1_3D[t2][t1][t3] = b1;
-					map->B2_3D[t2][t1][t3] = b2;
-					map->B3_3D[t2][t1][t3] = b3;
-				}
-
 			}
 		}
 
